--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
   <div class="wrapper">
 
-    <form action="" class="filter">
+    <div class="filter">
       <input class="filter__search" placeholder="Filter by name...">
       <button type="reset" class="filter__reset">Reset</button>
-    </form>
+    </div>
 
     <table class="user-table">
       <thead>
